Change possibleNextStages from string list to object list with role-based transition support
Change possibleNextStages from string list to object list with role-based transition support

Change possibleNextStages from string list to object list with role-based transition support